Add auth with iron-session

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/open-banking-poc"
+SESSION_PASSWORD=""
 
 # Example:
 # SERVERVAR="foo"
