--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "iron-session": "^8.0.2",
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
